Fixed Alignment

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -12,6 +12,13 @@ body {
   justify-content: center;
   align-items: center;
 }
+.bg-image
+{
+  background-image: url('../images/Banner.png');
+  background-position: cover;
+  position: absolute;
+  top: 0;
+}
 
 .bg-color {
   background-color: #44c0a8 !important;
@@ -173,6 +180,9 @@ body {
     width: 250px;
     top: 10%;
   }
+  .orange-banner {
+    height: 600px;
+  }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
   .font-relative {
@@ -190,7 +200,7 @@ body {
     top: 18%;
   }
   .orange-banner {
-    height: 360px;
+    height: 450px;
   }
   .footer {
     height: 330px;
@@ -216,6 +226,7 @@ body {
 @media (min-width: 1401px) {
   .orange-banner {
     width: 100%;
+    height: 450px;
   }
   .footer {
     height: 420px;
